feat(api): added endpoint for querying perks in backend
