# server/app/api/common/enter.go
@@ -9,4 +9,5 @@ type cmnApi struct{}
 func InitCommonAPI(router *gin.RouterGroup) {
 	api := cmnApi{}
 	router.GET("/gameversion", api.GetGameVersions)
+	router.GET("/perks", api.GetPerksData)
 }
